--- a/index.html
+++ b/index.html
@@ -46,17 +46,8 @@
   <div id="black-bar" class="div">
     <div id="black-content-wrapper" class="w-full h-full">
         <!-- EL CONTENIDO DINÁMICO SERÁ INYECTADO AQUÍ POR JAVASCRIPT -->
-<div class="help-panel">
-  <h3>Controles de Teclado</h3>
-  <ul>
-    <li>Flechas: Navegar entre nodos</li>
-    <li>W: Seleccionar nodo actual</li>
-    <li>A: Cancelar selección</li>
-    <li>Doble clic: Cambiar ícono</li>
-  </ul>
-</div>
-<div id="canvas">
-  <svg id="svg">
+<div id="canvas" style="width: 100%; height: 500px; position: relative;">
+  <svg id="svg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
     <defs>
       <marker id="arrowhead" markerWidth="10" markerHeight="7" 
               refX="10" refY="3.5" orient="auto">
