--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div id="black-bar" class="div">
     <div id="black-content-wrapper" class="w-full h-full">
       <!-- EL CONTENIDO DINÁMICO SERÁ INYECTADO AQUÍ POR JAVASCRIPT -->
-      <div id="canvas" style="width: 100%; height: 500px; position: relative;">
+      <div id="canvas" >
         <!-- Capa para dibujar conexiones con DIV en lugar de SVG -->
         <div id="connections-layer" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
       </div>
