--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   </style>
 </head>
 
-<body id="body-container">
+<!-- Añadido: clase 'debug' para ver puertos durante desarrollo (opcional) -->
+<body id="body-container" class="debug">
   <div id="mouse-monitor">
     <div id="mouse-position">X: 0, Y: 0</div>
     <div id="viewport-size">Ancho: 0, Alto: 0</div>
@@ -46,7 +47,7 @@
   <div id="black-bar" class="div">
     <div id="black-content-wrapper" class="w-full h-full">
       <!-- EL CONTENIDO DINÁMICO SERÁ INYECTADO AQUÍ POR JAVASCRIPT -->
-      <div id="canvas" >
+      <div id="canvas" style="width: 100%; height: 100%; position: relative;">
         <!-- Capa para dibujar conexiones con DIV en lugar de SVG -->
         <div id="connections-layer" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
       </div>
