--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirigiendo…</title>
-  <link rel="canonical" href="/src/html/home.html">
+  <link rel="canonical" href="./src/html/home.html">
 </head>
 <body>
   <script>
-    window.location.replace("/src/html/home.html");
+    window.location.replace("./src/html/home.html");
   </script>
   <noscript>
     <p>Redirigiendo a la página principal…</p>
